--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Tajne</title>
-<meta http-equiv="refresh" content="0; URL=hhttps://pbs.twimg.com/media/Fzfb4iAXgAIbBq8?format=png&name=360x360">
+<meta http-equiv="refresh" content="0; URL=https://pbs.twimg.com/media/Fzfb4iAXgAIbBq8?format=png&name=360x360">
 <link rel="canonical" href="https://pbs.twimg.com/media/Fzfb4iAXgAIbBq8?format=png&name=360x360">
 <head>
 	<meta name="description" content="aha32">
